--- a/.gitignore
+++ b/.gitignore
@@ -250,3 +250,11 @@ paket-files/
 # JetBrains Rider
 .idea/
 *.sln.iml
+/Windows_Explorer/
+/Custom Chart
+/Windows_Explorer/
+/Project/Samples/Sample 2
+/Project/Samples/Sample 1/
+/Windows_Explorer/
+/Project/Samples/Sample 1/
+/Exams
